change mobile nav drawer width & fix gallery image spacing

--- a/dev/sass/_component.image-gallery.scss
+++ b/dev/sass/_component.image-gallery.scss
@@ -1,11 +1,16 @@
 .c-image-gallery {
     display: flex;
-    justify-content: space-between;
+    //justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
 
   > a {
     width: 30%;
-    margin-bottom: 3.33333%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+
+    &:nth-child(3n) {
+      margin-right:0;
+    }
   }
 }
