--- a/dev/sass/_layout.scss
+++ b/dev/sass/_layout.scss
@@ -3,7 +3,7 @@
   transition: .24s linear;
 
   &.is-open {
-    transform: translateX(-320px);
+    transform: translateX(-280px);
     transition: .24s linear;
   }
 }
